[tool.poetry]
name = "api-flask"
version = "0.1.0"
description = ""
authors = ["MaxHoefl <hoefl.max@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
